<resources>
	<string name="app_name">GoDrive</string>
	<string name="logintxt">Sign In</string>
	<string name="noaccount">No Account?</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="registertxt">Register</string>
	<string name="password2">Repeat Password</string>
	<string name="email">E-Mail</string>
	<string name="haveaccount">Already have an Account?</string>
	<string name="nametxt">Name</string>
	<string name="passwdmatch">Passwords dosen\'t match</string>
	<string name="title_activity_drive_accept">New Client</string>
	<string name="drive_accept">Accept</string>
	<string name="drive_deny">Deny</string>
	<string name="title_activity_current_drive">CurrentDrive</string>
	<string name="drive_cancel">Cancel Drive</string>
	<string name="wait_for_client">Please wait for a client request to come in.</string>
	<string name="end_drive">End Drive</string>
	<string name="client_pickup">Client picked up</string>
</resources>
